--- a/index.html
+++ b/index.html
@@ -2,127 +2,46 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>SirTros City | Status</title>
+    <title>SirTros City Status</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #0a0a0a linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), 
-                        url('https://images.unsplash.com') no-repeat center center fixed;
-            background-size: cover;
-            font-family: 'Segoe UI', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            color: white;
-        }
-
-        .container {
-            background: rgba(0, 0, 0, 0.85);
-            padding: 30px;
-            border-radius: 15px;
-            border: 1px solid #00aaff;
-            box-shadow: 0 0 20px rgba(0, 170, 255, 0.4);
-            text-align: center;
-            width: 320px;
-            backdrop-filter: blur(10px);
-        }
-
-        h1 { margin: 0 0 20px; font-size: 18px; color: #00aaff; word-break: break-all; }
-
-        .stat-box {
-            margin: 10px 0;
-            padding: 15px;
-            background: rgba(255,255,255,0.05);
-            border-radius: 10px;
-            border: 1px solid rgba(0, 170, 255, 0.1);
-        }
-
-        .label { display: block; font-size: 10px; color: #888; text-transform: uppercase; letter-spacing: 2px; }
-        .value { font-size: 24px; font-weight: bold; margin-top: 5px; }
-
-        .online { color: #2ecc71; text-shadow: 0 0 10px rgba(46, 204, 113, 0.4); }
-        .offline { color: #e74c3c; text-shadow: 0 0 10px rgba(231, 76, 60, 0.4); }
-
-        .copy-btn {
-            margin-top: 20px;
-            background: #00aaff;
-            color: white;
-            border: none;
-            padding: 12px;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 100%;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-        .copy-btn:hover { background: #0088cc; transform: scale(1.02); }
+        body { margin:0; background:#111; color:white; font-family:sans-serif; display:flex; justify-content:center; align-items:center; height:100vh; }
+        .card { background:#222; padding:30px; border-radius:15px; border:1px solid #00aaff; text-align:center; width:300px; }
+        .online { color:#2ecc71; font-weight:bold; font-size:24px; }
+        .offline { color:#e74c3c; font-weight:bold; font-size:24px; }
+        .val { font-size:20px; margin:10px 0; }
     </style>
 </head>
 <body>
-
-<div class="container">
-    <h1 id="ip-title">SirTros-city.aternos.me</h1>
-    
-    <div class="stat-box">
-        <span class="label">Server Status</span>
-        <div id="status" class="value offline">OFFLINE</div>
+    <div class="card">
+        <h2 style="font-size:16px; color:#888;">SirTros-city.aternos.me</h2>
+        <div id="st" class="offline">NAČÍTÁNÍ...</div>
+        <div class="val">Hráči: <span id="pl">0/20</span></div>
+        <div class="val">Ping: <span id="pg">---</span></div>
+        <button onclick="navigator.clipboard.writeText('SirTros-city.aternos.me');alert('IP OK')" style="margin-top:15px;cursor:pointer;">Kopírovat IP</button>
     </div>
 
-    <div class="stat-box">
-        <span class="label">Hráči Online</span>
-        <div id="players" class="value">0 / 20</div>
-    </div>
-
-    <div class="stat-box">
-        <span class="label">Odezva (Ping)</span>
-        <div id="ping" class="value">---</div>
-    </div>
-
-    <button class="copy-btn" onclick="copyIP()">Kopírovat IP adresu</button>
-</div>
-
-<script>
-    const SERVER_IP = 'SirTros-city.aternos.me';
-
-    async function updateStatus() {
-        try {
-            // Tady byla ta hlavní chyba - nyní opraveno na verzi /2/
-            const response = await fetch(`https://api.mcsrvstat.us{SERVER_IP}`);
-            const data = await response.json();
-
-            const statusEl = document.getElementById('status');
-            const playersEl = document.getElementById('players');
-            const pingEl = document.getElementById('ping');
-
-            if (data.online) {
-                statusEl.innerText = "ONLINE";
-                statusEl.className = "value online";
-                // Načte počet hráčů i tvoji max. kapacitu (20)
-                playersEl.innerText = data.players.online + " / " + data.players.max;
-                pingEl.innerText = (data.debug && data.debug.ping ? data.debug.ping : "15") + " ms";
-            } else {
-                statusEl.innerText = "OFFLINE";
-                statusEl.className = "value offline";
-                playersEl.innerText = "0 / 20";
-                pingEl.innerText = "---";
+    <script>
+        async function ck() {
+            try {
+                // Přímý odkaz bez proměnných, aby se nic nepokazilo
+                const r = await fetch('https://api.minetools.eu');
+                const d = await r.json();
+                
+                if(d.error) {
+                    document.getElementById('st').innerText = "OFFLINE";
+                    document.getElementById('st').className = "offline";
+                } else {
+                    document.getElementById('st').innerText = "ONLINE";
+                    document.getElementById('st').className = "online";
+                    document.getElementById('pl').innerText = d.players.online + " / " + d.players.max;
+                    document.getElementById('pg').innerText = Math.round(data.latency) + " ms";
+                }
+            } catch(e) {
+                document.getElementById('st').innerText = "OFFLINE";
             }
-        } catch (err) {
-            console.error("Chyba:", err);
-            document.getElementById('status').innerText = "CHYBA API";
         }
-    }
-
-    function copyIP() {
-        navigator.clipboard.writeText(SERVER_IP);
-        alert("IP adresa byla zkopírována!");
-    }
-
-    // Načíst hned a pak každých 30 sekund
-    updateStatus();
-    setInterval(updateStatus, 30000);
-</script>
-
+        ck();
+        setInterval(ck, 45000);
+    </script>
 </body>
 </html>
